Fix iOS alignment of form button

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -1355,6 +1355,7 @@
         }
       }
       button {
+        display: flex;
         background: $background-brown;
         font-size: 2vw;
         line-height: 150%;
